<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    


<RelativeLayout 
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".Contactus"
    tools:ignore="ContentDescription" >

    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtHeadItemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/imageView1"
        android:background="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp" />
    
    <TextView
        android:id="@+id/txtUserHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:gravity="center_horizontal"
        android:text="@string/contactus"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1a"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtUserHeader"
        android:text="@string/phones"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1a"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtHeadItemDescr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editSenderEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtHeadItemDescr"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editSenderEmail"
        android:text="@string/send_us_message"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtItemDescr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView03"
        android:text="@string/subject"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtItemDescr"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editSubject"
        android:text="@string/email_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editEmailText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView04"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="15"
        android:maxWidth="10dp"
        android:textAlignment="viewStart"
        android:textStyle="normal"
        tools:ignore="TextFields" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editEmailText"
        android:text="@string/send" />

    <TextView
        android:id="@+id/txtCartSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1a"
        android:layout_below="@+id/textView1a"
        android:text="@string/mobile_number"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>
</ScrollView>