<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    
<RelativeLayout
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".Contactus"
    tools:ignore="ContentDescription" >

    <TextView
        android:id="@+id/txtUserHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp" />

    
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtUserHeader"
        android:text="@string/Name" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtName"
        android:text="@string/Address" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAddress"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtAddress"
        android:text="@string/City" />

    <EditText
        android:id="@+id/edtCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCity"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtCity"
        android:text="@string/Phone" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPhone"
        android:ems="10"
        android:inputType="phone" >
    </EditText>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtPhone"
        android:text="@string/Your_email" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:ems="10"
        android:inputType="textEmailAddress" >

    </EditText>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtEmail"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:ems="10"
        android:inputType="textPassword" >

    </EditText>

    <TextView
        android:id="@+id/txtConfPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtPassword"
        android:text="@string/ConfirmPassword" />

    <EditText
        android:id="@+id/edtConfPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfPassword"
        android:ems="10"
        android:inputType="textPassword" >

    </EditText>
    
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtConfPassword"
        android:text="@string/SignIn" />
    
</RelativeLayout>

</ScrollView>