<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="ScrollViewSize" >
    
<RelativeLayout
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".aboutus"
    tools:ignore="ContentDescription" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/imageView1"
        android:background="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp" />
    
    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:gravity="center_horizontal"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/chkRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSettings"
        android:layout_marginRight="66dp"
        android:text="@string/remeber_password" />
    
    <Spinner
        android:id="@+id/spinSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkRememberPassword"/>
    
    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinSaveData"
        android:onClick="onSaveClick"
        android:text="@string/SaveSettings" />

    
</RelativeLayout>
</ScrollView>