<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green" >

    <TextView
        android:id="@+id/txtHeadItemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Item_Code"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtItemId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtItemId"
        android:layout_toRightOf="@id/txtHeadItemId"
        android:gravity="right"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtHeadItemDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtHeadItemId"
        android:text="@string/Item_Descr"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtItemDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtHeadItemDescr"
        android:layout_alignParentLeft="false"
        android:layout_toRightOf="@id/txtHeadItemDescr"
        android:gravity="right"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtHeadItemMm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtHeadItemDescr"
        android:text="@string/Item_Mm"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtItemMm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtHeadItemMm"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_toRightOf="@id/txtHeadItemMm"
        android:gravity="right"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtHeadItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtHeadItemMm"
        android:text="@string/Item_Price"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtHeadItemPrice"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/txtHeadItemPrice" />

    <TextView
        android:id="@+id/txtHeadItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtHeadItemPrice"
        android:textColor="@color/white"
        android:text="@string/Item_Quantity" />

    <TextView
        android:id="@+id/txtItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtHeadItemQuantity"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/txtHeadItemQuantity" />
<TextView
        android:id="@+id/txtHeadItemSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@id/txtHeadItemQuantity"
        android:textColor="@color/white"
        android:text="@string/Item_Summary" />

    <TextView
        android:id="@+id/txtItemSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txtHeadItemSummary"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/txtHeadItemSummary" />    
</RelativeLayout>