<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    
<RelativeLayout
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".Contactus"
    tools:ignore="ContentDescription" >

    <TextView
        android:id="@+id/txtUserHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp" />

    
    <TextView
        android:id="@+id/txtOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtUserHeader"
        android:text="@string/OldPassword" />

    <EditText
        android:id="@+id/edtOldPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtOldPassword"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtOldPassword"
        android:text="@string/NewPassword" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNewPassword"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/txtConfPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtNewPassword"
        android:text="@string/ConfirmPassword" />

    <EditText
        android:id="@+id/edtConfPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfPassword"
        android:inputType="textPassword" >
    </EditText>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtConfPassword"
        android:text="@string/SignIn" />
    
</RelativeLayout>

</ScrollView>